<resources>
    <string name="app_name">AppleCare</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="sub_menu">Sub Menu</string>
    <string name="spam">Spam</string>
    <string name="faq">FAQ</string>
    <string name="camera">Camera</string>
    <string name="history">History</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="farmer">user</string>
    <string name="expert">expert</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="questions">Questions</string>
    <string name="your_solution">Your Solutions</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="rpt_password_required">Confirm password required</string>
    <string name="password_required">Password Required</string>
    <string name="inavlid_email">Invalid Email</string>
    <string name="email_required">Email Required</string>
    <string name="phone_required">Phone Rquired</string>
    <string name="name_required">Name Required</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="district">District</string>
    <string name="tehsil">Tehsil</string>
    <string name="pin">Pin</string>
    <string name="scab_symptoms">Primary infection on lower surface of leaves . Spots develop as olivaceous and turn dark brown to black and become  velvety, may coalesce to cover the whole surface.
     Secondary infection occurs on upper surface and leaves become twisted or puckered with black circular spots.
    Fruits show small, black ,circular lesions on their skin both on trees as well as after cold storage. Entire fruit surface is susceptible to infection but infections early in the season generally cluster around the calyx end. Late summer or early fall may not be visible till storage, leading to pin point scab.</string>
    <string name="alternaria_leaf_spot_symptoms">Spots are 1/8 to ¼ inches in diameter, round, brown and occasionally purple border. Some spots are grayish brown.
Most of them undergo secondary enlargement and become irregular and more darker, acquiring frogeye appearance.
Infection on petioles leads to 50% defoliation
Fruit infection results in small, dark, raised pimple like lesions associated  with lenticels (often resembles lenticels blotch)</string>
    <string name="marsonina_leaf_blotch_symptoms">-Occurs on mature leaves
5-10mm grayish brown spots often tinged purple at the periphery
-Small black acervuli are visible on the leaf surface
-Later lesions coalesce and form large dark brown blotches and leaves turn yellow.
-Severe defoliation results in failure of crop in the following year.
</string>
    <string name="powdery_mildew_symptoms">Small patches of white or grey powdry masses on under surface of leaves
-Leaves grow longer and narrower and margins are curled(longitudinal folding)
Twigs covered with powdry mass.
</string>
    <string name="sooty_blotch_lyspeck_symptoms">Sooty or cloudy blotches on leaf surface which are olive green with indefinite outline.
-The smudge occurs on outer surface of cuticle mostly .only in rare cases penetrates the cuticle
Fly speck: Raised Black and shiny round dots that resemble fly excreta (Groups of Few to 50 dots). The blemish can be removed by vigorous rubbing or bleaching.
Both diseases can occur on the same fruit</string>
    <string name="black_rot_symptoms">Small ,purple specks on upper leaf surface.
-Sepal infection leads to BER(Blossom end rot)
-Margin remains purple, while center turns tan to brown
-Black spots with red halo
-Lesions are firm and sunken
-Chlorosis and defoliation
-Later series of black to brown concentric bands appear
-Flesh of rotted area remains firm and leathery
-Black dots of fungus are seen on infected fruit.
-Later it leads to limb canker.
-Rot around seed cavity or core.
-Fruits ripen early (3-6 weeks).
Lower 75cm of trunk
-Mostly at the junction of lateral roots with trunk
-Brown bark and becomes soft and mushy or slimy
-Dark streaks at cambium and extend beyond canker margin
-Sreads both horizontally and vertically
-Girdling of limbs, roots or trunk and finally death of the affected tree.
</string>
    <string name="core_rot_symptoms">-Rot around seed cavity or core.
-Fruits ripen early (3-6 weeks).</string>
    <string name="collar_rot_symptoms">Lower 75cm of trunk</string>
    <string name="symptoms">Symptoms</string>
    <string name="recommendtion">Recommendation</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="diseaseName">Diease Name</string>
</resources>