<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="applecare.com.applecare.Activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/profile_image_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:layout_below="@+id/login_heading_txtview"
                android:inputType="phone"
                android:maxLength="@integer/ten"
                android:paddingStart="@dimen/default_text"
                android:paddingLeft="@dimen/default_text"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_below="@+id/email_edit_text"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/circle_edge_rectangle"
                android:paddingStart="@dimen/default_text"
                android:paddingLeft="@dimen/default_text"
                android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:id="@+id/radio_grop"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:visibility="gone"
                android:background="@drawable/circle_edge_rectangle"
                android:layout_weight="@integer/two"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/farmer_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:layout_weight="@integer/one"
                    android:text="@string/farmer"/>
                <RadioButton
                    android:id="@+id/expert_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/one"
                    android:text="@string/expert"/>
            </RadioGroup>


            <TextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary" />


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="@dimen/button_width"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/remember_me_checkbox"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/colorDeepGreen"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/default_text" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
