<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="applecare.com.applecare.Activity.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:foregroundGravity="center"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/login_heading_txtview"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/login_heading_txtview"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:inputType="phone"
                android:maxLength="@integer/ten"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/login_heading_txtview"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/phone_number" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/email_edit_text"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/password"
                android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/email_edit_text"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >

                <AutoCompleteTextView
                    android:id="@+id/district_text_view"
                    android:layout_width="@dimen/edittext_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/circle_edge_rectangle"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:hint="@string/district"
                    />
            </android.support.design.widget.TextInputLayout>
           <LinearLayout
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:orientation="horizontal"
              >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <AutoCompleteTextView
                        android:layout_width="170dp"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/circle_edge_rectangle"
                        android:hint="@string/tehsil"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:layout_width="170dp"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/circle_edge_rectangle"
                        android:hint="@string/pin"
                        android:inputType="numberDecimal"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_grop"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:layout_weight="@integer/two"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/farmer_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/one"
                    android:checked="true"
                    android:text="@string/farmer"/>
                <RadioButton
                    android:id="@+id/expert_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/one"
                    android:text="@string/expert"/>
            </RadioGroup>


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_up_button"
                android:layout_width="@dimen/button_width"
                android:layout_gravity="center"
                android:background="@drawable/circle_edge_rectangle"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/remember_me_checkbox"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/colorDeepGreen"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
